--- a/product-validation-service/src/main/resources/application.yml
+++ b/product-validation-service/src/main/resources/application.yml
@@ -2,6 +2,13 @@ server:
   port: 8090
 
 spring:
+  kafka:
+    bootstrap-servers: ${KAFKA_BROKER:localhost:9092}
+    topic:
+      teste: teste
+    consumer:
+      group-id: product-validation-group
+      auto-offset-reset: latest
   datasource:
     driver-class-name: org.postgresql.Driver
     url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:product-db}
@@ -13,3 +20,9 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
+
+logging:
+  level:
+    org:
+      apache:
+        kafka: OFF
