--- a/payment-service/src/main/resources/application.yml
+++ b/payment-service/src/main/resources/application.yml
@@ -6,15 +6,19 @@ spring:
   kafka:
     bootstrap-servers: ${KAFKA_BROKER:localhost:9092}
     topic:
-      teste: teste
+      orchestrator: orchestrator
+      payment-success: payment-success
+      payment-fail: payment-fail
     consumer:
       group-id: payment-group
       auto-offset-reset: latest
+
   datasource:
     driver-class-name: org.postgresql.Driver
     url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5433}/${DB_NAME:payment-db}
     username: ${DB_USER:postgres}
     password: ${DB_PASSWORD:123456}
+
   jpa:
     hibernate:
       ddl-auto: create-drop
