--- a/product-validation-service/src/main/resources/application.yml
+++ b/product-validation-service/src/main/resources/application.yml
@@ -5,15 +5,19 @@ spring:
   kafka:
     bootstrap-servers: ${KAFKA_BROKER:localhost:9092}
     topic:
-      teste: teste
+      orchestrator: orchestrator
+      product-validation-success: product-validation-success
+      product-validation-fail: product-validation-fail
     consumer:
       group-id: product-validation-group
       auto-offset-reset: latest
+
   datasource:
     driver-class-name: org.postgresql.Driver
     url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:product-db}
     username: ${DB_USER:postgres}
     password: ${DB_PASSWORD:123456}
+
   jpa:
     hibernate:
       ddl-auto: create-drop
