--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,26 +50,31 @@ services:
     ports:
       - "5434:5432"
 
-  kafka:
-    container_name: kafka
-    image: obsidiandynamics/kafka
-    restart: "no"
+  broker:
+    image: apache/kafka:latest
+    hostname: broker
+    container_name: broker
     ports:
-      - "2181:2181"
-      - "9092:9092"
+      - '9092:9092'
+    environment:
+      KAFKA_NODE_ID: 1
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: 'CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT'
+      KAFKA_ADVERTISED_LISTENERS: 'PLAINTEXT_HOST://localhost:9092,PLAINTEXT://broker:19092'
+      KAFKA_PROCESS_ROLES: 'broker,controller'
+      KAFKA_CONTROLLER_QUORUM_VOTERS: '1@broker:29093'
+      KAFKA_LISTENERS: 'CONTROLLER://:29093,PLAINTEXT_HOST://:9092,PLAINTEXT://:19092'
+      KAFKA_INTER_BROKER_LISTENER_NAME: 'PLAINTEXT'
+      KAFKA_CONTROLLER_LISTENER_NAMES: 'CONTROLLER'
+      CLUSTER_ID: '4L6g3nShT-eMCtK--X86sw'
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+      KAFKA_LOG_DIRS: '/tmp/kraft-combined-logs'
+    volumes:
+        - './data/kafka/data:/var/lib/kafka/data'
     networks:
       - orchestrator-saga
-    environment:
-      KAFKA_LISTENERS: "INTERNAL://:29092,EXTERNAL://:9092"
-      KAFKA_ADVERTISED_LISTENERS: "INTERNAL://kafka:29092,EXTERNAL://localhost:9092"
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: "INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT"
-      KAFKA_INTER_BROKER_LISTENER_NAME: "INTERNAL"
-      KAFKA_ZOOKEEPER_SESSION_TIMEOUT: "6000"
-      KAFKA_RESTART_ATTEMPTS: "10"
-      KAFKA_RESTART_DELAY: "5"
-      ZOOKEEPER_AUTOPURGE_PURGE_INTERVAL: "0"
-    volumes:
-      - ./data/kafka/data:/var/lib/kafka/data
 
   redpanda-console:
     container_name: redpanda
@@ -85,20 +90,20 @@ services:
       CONFIG_FILEPATH: /tmp/config.yml
       CONSOLE_CONFIG_FILE: |
         kafka:
-          brokers: ["kafka:29092"]
+          brokers: ["broker:19092"]
     depends_on:
-      - "kafka"
+      - broker
 
   order-service:
     build: "./order-service"
     container_name: order-service
     depends_on:
       - order-db
-      - kafka
+      - broker
     networks:
       - orchestrator-saga
     environment:
-      - KAFKA_BROKER=kafka:29092
+      - KAFKA_BROKER=broker:19092
       - MONGO_DB_URI=mongodb://admin:123456@order-db:27017
     ports:
       - "3000:3000"
@@ -107,11 +112,11 @@ services:
     build: "./orchestrator-service"
     container_name: orchestrator-service
     depends_on:
-      - kafka
+      - broker
     networks:
       - orchestrator-saga
     environment:
-      - KAFKA_BROKER=kafka:29092
+      - KAFKA_BROKER=broker:19092
     ports:
       - "8080:8080"
 
@@ -120,11 +125,11 @@ services:
     container_name: product-validation-service
     depends_on:
       - product-db
-      - kafka
+      - broker
     networks:
       - orchestrator-saga
     environment:
-      - KAFKA_BROKER=kafka:29092
+      - KAFKA_BROKER=broker:19092
       - DB_HOST=product-db
       - DB_PORT=5432
       - DB_NAME=product-db
@@ -138,11 +143,11 @@ services:
     container_name: payment-service
     depends_on:
       - payment-db
-      - kafka
+      - broker
     networks:
       - orchestrator-saga
     environment:
-      - KAFKA_BROKER=kafka:29092
+      - KAFKA_BROKER=broker:19092
       - DB_HOST=payment-db
       - DB_PORT=5432
       - DB_NAME=payment-db
@@ -156,11 +161,11 @@ services:
     container_name: inventory-service
     depends_on:
       - inventory-db
-      - kafka
+      - broker
     networks:
       - orchestrator-saga
     environment:
-      - KAFKA_BROKER=kafka:29092
+      - KAFKA_BROKER=broker:19092
       - DB_HOST=inventory-db
       - DB_PORT=5432
       - DB_NAME=inventory-db
